change the file exchange signature